programs/solana/packages/solana-ibc-macros/tests/ui/empty_module.stderr
error[E0658]: non-inline modules in proc macro input are unstable
 --> tests/ui/empty_module.rs:4:1
  |
4 | pub mod my_app;
  | ^^^^^^^^^^^^^^^
  |
  = note: see issue #54727 <https://github.com/rust-lang/rust/issues/54727> for more information

error: IBC app module must have a body with callback implementations
 --> tests/ui/empty_module.rs:4:1
  |
4 | pub mod my_app;
  | ^^^^^^^^^^^^^^^
