programs/solana/packages/solana-ibc-macros/tests/ui/empty_module.rs
use solana_ibc_macros::ibc_app;

#[ibc_app]
pub mod my_app;

fn main() {}
